[gd_scene load_steps=4 format=3 uid="uid://dcyemta4b4jcq"]

[ext_resource type="Script" path="res://assets/Scripts/Menu.gd" id="1_7rv4w"]
[ext_resource type="FontFile" uid="uid://bjjald3gxb8jn" path="res://assets/Fonts/Comfortaa/static/Comfortaa-Bold.ttf" id="1_dc0cl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_44qqj"]

[node name="Node" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7rv4w")

[node name="ButtonStart" type="Button" parent="."]
offset_left = 20.0
offset_top = 400.0
offset_right = 205.0
offset_bottom = 479.0
focus_neighbor_bottom = NodePath("../ButtonCredits")
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.964706, 0.992157, 0, 1)
theme_override_fonts/font = ExtResource("1_dc0cl")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_44qqj")
action_mode = 0
text = "Start"
alignment = 0

[node name="ButtonOptions" type="Button" parent="."]
offset_left = 20.0
offset_top = 500.0
offset_right = 315.0
offset_bottom = 579.0
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.964706, 0.992157, 0, 1)
theme_override_fonts/font = ExtResource("1_dc0cl")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_44qqj")
disabled = true
action_mode = 0
text = "Options"
alignment = 0

[node name="ButtonQuit" type="Button" parent="."]
offset_left = 20.0
offset_top = 600.0
offset_right = 204.0
offset_bottom = 679.0
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.964706, 0.992157, 0, 1)
theme_override_fonts/font = ExtResource("1_dc0cl")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_44qqj")
disabled = true
action_mode = 0
text = "Quit"
alignment = 0

[node name="ButtonCredits" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 991.0
offset_right = 302.0
offset_bottom = 1070.0
focus_neighbor_top = NodePath("../ButtonStart")
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.964706, 0.992157, 0, 1)
theme_override_fonts/font = ExtResource("1_dc0cl")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_44qqj")
action_mode = 0
text = "Credits"
alignment = 0

[node name="ButtonCreditsBack" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 991.0
offset_right = 302.0
offset_bottom = 1070.0
focus_neighbor_top = NodePath("../ButtonStart")
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.964706, 0.992157, 0, 1)
theme_override_fonts/font = ExtResource("1_dc0cl")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_44qqj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_44qqj")
action_mode = 0
text = "Back"
alignment = 0

[node name="TittleText" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 20.0
offset_right = 787.0
offset_bottom = 396.0
theme_override_fonts/normal_font = ExtResource("1_dc0cl")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "

Devil's Throat"

[node name="CreditsText" type="RichTextLabel" parent="."]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_fonts/normal_font = ExtResource("1_dc0cl")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "
[center] Arts: Kaique
Code/Design: Pedro
Music/Sfx: Walisson
Documentation: Andr√©
Level Design: Luiz "
